<resources>
    <string name="app_name">ดูแลสุขภาพด้วยแพทย์แผนไทย</string>
    <string name="ss_picture">ss_picture</string>
    <string name="thai_traditional_medicine_healthCare">Thai Traditional Medicine Healthcare</string>
    <string name="th_name_ss">ดูแลสุขภาพด้วยแพทย์แผนไทย</string>
    <string name="search_here">ค้นหาที่นี่…</string>

    <string name="top_bar_text">TEST</string>
    <string name="top_bar_text_disease_search">ค้นหาอาการ</string>
    <string name="top_bar_text_firstaid_search">ค้นหาการปฐมพยาบาลเบื้องต้น</string>
    <string name="top_bar_text_herb_search">ค้นหาสมุนไพร</string>

    <string name="home">HOME</string>
    <string name="search_tx_1">คุณไม่สบายตรงไหน</string>
    <string name="search_tx_2">ศีรษะ ▶</string>
    <string name="search_tx_3">ลำตัว ▶</string>
    <string name="search_tx_4">ลำตัวส่วนล่าง ▶</string>

    <string name="search_tx_5">ค้นหาอาการ ▶</string>
    <string name="search_tx_6">ค้นหาการปฐมพยาบาลเบื้องต้น ▶</string>
    <string name="search_tx_7">ค้นหาสมุนไพร ▶</string>
    <string name="search_tx_8">แตะที่ข้อความ</string>
    <string name="body_picture">body_picture</string>

    <string name="home_tx1">ดูแลสุขภาพด้วยแพทย์แผนไทย</string>
    <string name="home_tx2">วันนี้คุณสบายดีไหม ?</string>
    <string name="home_tx4">แตะที่ icon</string>

    <string name="healthCare_tx1">บันทึกข้อมูลสุขภาพ</string>
    <string name="healthCare_date">1 มกราคม 2020</string>
    <string name="healthCare_tx5">ฉันสบายดี</string>
    <string name="healthCare_tx6">ฉันไม่ค่อยสบาย</string>
    <string name="healthCare_tx7">แตะที่ icon</string>

    <string name="profile_tx_1">ชื่อ</string>
    <string name="profile_tx_2">พ.ศ. ที่เกิด</string>
    <string name="profile_tx_3">โรคประจำตัว</string>
    <string name="profile_btn">ดูประวัติสุขภาพ</string>
    <string name="dds_detail_tx">รายละเอียด</string>
    <string name="dds_treat_tx">วิธีการรักษา</string>
    <string name="have_a_good_day">ขอให้คุณมีสุขภาพแข็งแรง</string>
    <string name="are_you_ok">คุณเป็นอะไรมา</string>
    <string name="btn_save">บันทึก</string>
    <string name="regis_start_btn">เริ่มต้น</string>
    <string name="regis_welcome_txt">ยินดีต้อนรับ</string>
    <string name="regis_txt_suggest">แตะที่รูปปฏิทิน</string>
    <string name="are_you_ok_header">บันทึกข้อมูลสุขภาพ</string>
    <string name="are_you_ok_today_txt">วันนี้</string>
    <string name="are_you_ok_btn_txt1">ดูโรคที่เกี่ยวข้องกับอาการ</string>
    <string name="are_you_ok_btn_txt2">บันทึกรายละเอียดเพิ่มเติม</string>
    <string name="RelateDiseaseTxt">โรคที่เกี่ยวข้องกับอาการ</string>
    <string name="RelateDiseaseTxt2">โรคที่มีโอกาสเกี่ยวข้องกับอาการ</string>
    <string name="RelateDiseaseTxt3">แตะที่ชื่ออาการเพื่อดูรายละเอียด</string>
    <string name="AddRecordDetailTxt">บันทึกรายละเอียดเพิ่มเติม</string>
    <string name="hintAddRecordDetail">บันทึกที่นี่</string>
    <string name="txtTopViewHead">ศีรษะ หู ตา คอ จมูก ปาก</string>
    <string name="calendarTxt">ประวัติสุขภาพ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adult">ผู้ใหญ่</string>
    <string name="kid">เด็ก</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="เพิ่มโรคลงในฐานข้อมูล">เพิ่มโรคลงในฐานข้อมูล</string>
    <string name="ชื่อโรค">ชื่อโรค</string>
    <string name="tag">tag</string>
    <string name="คีย์เวิร์ดของโรค">คีย์เวิร์ดของโรค</string>
    <string name="รายละเอียดของโรคสำหรับผู้ใหญ่">รายละเอียดสำหรับผู้ใหญ่</string>
    <string name="รายละเอียดโรคสำหรับเด็ก">รายละเอียดสำหรับเด็ก</string>
    <string name="เพิ่มข้อมูล">เพิ่มข้อมูล</string>
    <string name="เพิ่มการปฐมพยาบาลเบื้องต้นลงในฐานข้อมูล">เพิ่มการปฐมพยาบาลเบื้องต้น\nลงในฐานข้อมูล</string>
    <string name="ชื่อการปฐมพยาบาลเบื้องต้น">ชื่อการปฐมพยาบาลเบื้องต้น</string>
    <string name="คีย์เวิร์ดของการปฐมพยาบาลเบื้องต้น">คีย์เวิร์ดของการปฐมพยาบาลเบื้องต้น</string>
    <string name="รายละเอียดของการปฐมพยาบาลเบื้องต้น">รายละเอียดของการปฐมพยาบาลเบื้องต้น</string>

    <string name="เพิ่มสมุนไพรลงในฐานข้อมูล">เพิ่มสมุนไพรลงในฐานข้อมูล</string>
    <string name="ชื่อสมุนไพร">ชื่อสมุนไพร</string>
    <string name="คีย์เวิร์ดของสมุนไพร">คีย์เวิร์ดของสมุนไพร</string>
    <string name="รายละเอียดของสมุนไพร">รายละเอียดของสมุนไพร</string>

    <string name="admin">Admin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="เลือกสมุนไพรที่ต้องการลบ">เลือกสมุนไพรที่ต้องการลบ</string>
    <string name="อาการที่เกี่ยวข้องกับลำตัว">อาการที่เกี่ยวข้องกับลำตัว</string>
    <string name="อาการที่เกี่ยวข้องกับลำตัวส่วนล่าง">อาการที่เกี่ยวข้องกับลำตัวส่วนล่าง</string>
    <string name="เลือกโรคที่ต้องการแก้ไข">เลือกโรคที่ต้องการแก้ไข</string>
    <string name="เลือกการปฐมพยาบาลเบื้องต้นที่ต้องการแก้ไข">เลือกการปฐมพยาบาลเบื้องต้น\nที่ต้องการแก้ไข</string>
    <string name="แก้ไขการปฐมพยาบาลเบื้องต้นในฐานข้อมูล">แก้ไขการปฐมพยาบาลเบื้องต้น\nในฐานข้อมูล</string>

    <string name="แก้ไขข้อมูล">แก้ไขข้อมูล</string>
    <string name="เลือกสมุนไพรที่ต้องการแก้ไข">เลือกสมุนไพรที่ต้องการแก้ไข</string>
    <string name="แก้ไขสมุนไพรในฐานข้อมูล">แก้ไขสมุนไพรในฐานข้อมูล</string>
    <string name="add_disease_data">add Disease Data</string>
    <string name="add_herb_data">add Herb Data</string>
    <string name="add_first_aid_data">add First Aid Data</string>
    <string name="ดูรายละเอียดข้อมูลวันนี้">ดูรายละเอียดข้อมูลวันนี้</string>
    <string name="ดูรายละเอียด">ดูรายละเอียด</string>
    <string name="วันที่คุณเลือก">วันที่คุณเลือก :</string>
    <string name="มีข้อมูล">มีข้อมูล สามากดดูข้อมูลได้ที่ปุ่มด้านล่าง</string>

    <string name="adminAddDi">เพิ่มโรค</string>
    <string name="adminAddFA">เพิ่มการปฐมพยาบาล</string>
    <string name="adminAddHb">เพิ่มสมุนไพร</string>

    <string name="adminEditDi">แก้ไขโรค</string>
    <string name="adminEditFA">แก้ไขการปฐมพยาบาล</string>
    <string name="adminEditHb">แก้ไขสมุนไพร</string>

    <string name="adminDeleteDi">ลบโรค</string>
    <string name="adminDeleteFA">ลบการปฐมพยาบาล</string>
    <string name="adminDeleteHb">ลบสมุนไพร</string>
    <string name="edit_disease_data">แก้ไขโรคในฐานข้อมูล</string>

    <string name="add_disease_with">โรคที่มีอาการเกี่ยวข้อง</string>

</resources>