<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE7B9"
    tools:context=".SearchActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        app:itemIconTint="@color/nav_icon_color"
        app:itemTextColor="@color/nav_icon_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />

    <TextView
        android:id="@+id/myTxv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="122dp"
        android:layout_height="241dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/search_body_pic"
        android:contentDescription="@string/body_picture"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTxv_1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/myTxv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myTxv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myTxv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myTxv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myTxv_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_7"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myTxv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myTxv_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myTxv_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/kodchasan"
        android:text="@string/search_tx_8"
        android:textColor="#707070"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>