<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE7B9"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/ss_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:text="@string/thai_traditional_medicine_healthCare"
        android:textColor="#2B2B2B"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ss_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/kodchasan"
        android:gravity="center"
        android:text="@string/th_name_ss"
        android:textColor="#494949"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss_textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250sp"
        android:layout_height="200sp"
        android:contentDescription="@string/ss_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss_textView2"
        app:layout_constraintVertical_bias="0.829"
        app:srcCompat="@drawable/ss_pic" />
</androidx.constraintlayout.widget.ConstraintLayout>