<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE7B9"
    tools:context=".healthRecord.RelateDiseaseActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8BC34A"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewRelateDisease"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16sp"
            android:layout_weight="1"
            android:fontFamily="@font/kodchasan"
            android:gravity="center"
            android:text="@string/RelateDiseaseTxt"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/myPreviousIconRelateDisease"
        android:layout_width="16sp"
        android:layout_height="22sp"
        android:layout_margin="17sp"
        android:background="@drawable/left_arrow"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRelateDisease2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14sp"
        android:fontFamily="@font/kodchasan"
        android:gravity="center"
        android:padding="16sp"
        android:text="@string/RelateDiseaseTxt2"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRelateDisease2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:fontFamily="@font/kodchasan"
        android:gravity="center"
        android:text="@string/RelateDiseaseTxt3"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>